ecmascript/parser/tests/typescript-errors/tsc/es6/yieldExpressions/YieldStarExpression3_es6/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/es6/yieldExpressions/YieldStarExpression3_es6/input.ts:3:12
  |
3 |     yield *;
  |            ^

